# acidcat

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHEATSHEET.md  HANDOVER.md  README.md  SECURITY.md  WANTED.md  build_explorer.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
docs/: architecture.md  audio_file_formats.md  codebase_explorer.html  codebase_review_2026-05-02.md  format_internals.md  recovery.md  signal_processing.md  v0.5_field_notes.md  wanted-mpc.html  wanted.html
docs/dsp/: camelot_wheel.md  chroma_and_key.md  feature_pipeline.md  hpr.md  kind_inference.md  mfcc.md  onset_detection.md  rhythm_and_bpm.md  similarity.md  spectral_features.md  tonnetz.md
docs/formats/: 8svx-anatomy.html  adpcm.md  aiff-anatomy.html  aiff.md  akai-anatomy.html  amiga-anatomy.html  arturia.md  bfdlac-anatomy.html  bitwig-anatomy.html  bitwig-multisample.md  bitwig-wt.md  emu-anatomy.html  flac-anatomy.html  flac.md  fxp-anatomy.html  fxp.md  gf1pat-anatomy.html  kontakt.md  krz-anatomy.html  labx-anatomy.html  midi-anatomy.html  midi.md  mp3-anatomy.html  mp3.md  mp4-anatomy.html  mp4_m4a.md  mpc-anatomy.html  multisample-anatomy.html  ncw-anatomy.html  ni-anatomy.html  ogg-anatomy.html  ogg.md  rf64-anatomy.html  rf64.md  riff_wav.md  rmid-anatomy.html  rmid.md  rx2-anatomy.html  rx2.md  serum-anatomy.html  (+7 more)
skills/: README.md
skills/acidcat/: SKILL.md
src/acidcat/: __init__.py  __main__.py  _sandbox_worker.py  cli.py  mcp_server.py  tui_app.py  tui_theme.py
src/acidcat/commands/: audit.py  carve.py  census.py  chunks.py  convert.py  cover.py  detect.py  dump.py  explore.py  extract.py  features.py  index.py  info.py  inspect.py  locate.py  od.py  probe.py  query.py  recover.py  repair.py  scan.py  search.py  shape.py  similar.py  survey.py  tui.py  validate.py  write.py
src/acidcat/core/: adpcm.py  aiff.py  anomalies.py  audioscan.py  bitwig.py  bytefields.py  camelot.py  census.py  constraints.py  countrepair.py  cover.py  detect.py  edit_aiff.py  edit_riff.py  edits.py  features.py  fieldcodec.py  flac.py  flacrepair.py  formats.py  framescan.py  index.py  indexing.py  integrity.py  locate.py  lsb.py  mapped.py  midi.py  midi_write.py  mp3.py  mp4.py  mp4repair.py  ncw.py  ni.py  ogg.py  paths.py  preset_meta.py  probe.py  provenance.py  query_sql.py  (+20 more)
src/acidcat/core/data/: provenance_signatures.json
src/acidcat/core/grammar/: __init__.py  helpers.py  interp.py  model.py  strategies.py  types.py
src/acidcat/core/grammar/formats/: __init__.py  flac.py  wav.py
src/acidcat/core/walk/: __init__.py  aiff.py  akai.py  amiga.py  base.py  bfdlac.py  bitwig.py  emu.py  flac.py  fxp.py  gf1pat.py  krz.py  labx.py  midi.py  mp3.py  mp4.py  mpc.py  multisample.py  ncw.py  ni.py  ogg.py  rf64.py  rmid.py  rx2.py  serum.py  sf2.py  sigmf.py  svx.py  tracker.py  vital.py  wav.py  wt.py
src/acidcat/util/: csv_helpers.py  deps.py  midi.py  play.py  stdin.py
tests/: conftest.py  test_adpcm.py  test_aiff.py  test_akai.py  test_amiga.py  test_anomalies.py  test_api.py  test_audioscan.py  test_audit.py  test_audit_fixes.py  test_bfdlac.py  test_bytefields.py  test_camelot.py  test_carve.py  test_carve_typed.py  test_census.py  test_cmd_extract.py  test_cmd_locate.py  test_cmd_recover.py  test_command_memory.py  test_commands.py  test_constraints.py  test_container_coverage.py  test_convert.py  test_countrepair.py  test_cover.py  test_descriptor_fuzz.py  test_detect.py  test_differential_fuzz.py  test_emu.py  test_feature_vectors.py  test_flacrepair.py  test_format_dispatch.py  test_framescan.py  test_gf1pat.py  test_grammar_flac.py  test_grammar_wav.py  test_index.py  test_inspect.py  test_integrity.py  (+47 more)
