[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acidcat"
version = "0.5.3"
description = "Audio metadata explorer and analysis tool -- like exiftool, but for audio"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["audio", "wav", "metadata", "riff", "acid", "bpm", "librosa", "music"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
analysis = [
    "librosa>=0.10.1",
    "numpy>=1.26",
    "scipy>=1.13",
    "soundfile>=0.12",
]
tags = [
    "mutagen>=1.47",
]
ml = [
    "acidcat[analysis]",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]
viz = ["acidcat[ml]", "matplotlib>=3.7", "seaborn>=0.12"]
notebook = ["jupyter>=1.0", "ipykernel>=6.0"]
mcp = ["mcp>=1.0"]
all = ["acidcat[tags,ml,viz,notebook,mcp]"]

[project.scripts]
acidcat = "acidcat.cli:main"
acidcat-mcp = "acidcat.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
