[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acidcat"
version = "0.5.3"
description = "Audio metadata explorer and analysis tool, like exiftool but for audio"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "hed0rah", email = "18272116+hed0rah@users.noreply.github.com"},
]
keywords = [
    "audio", "wav", "aiff", "midi", "metadata", "riff",
    "acid", "bpm", "key", "camelot", "harmonic-mixing",
    "librosa", "music", "samples", "mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# mutagen is a base dep because the index dispatcher routes mp3/flac/ogg/m4a
# through it; a fresh user pointing acidcat at a modern sample collection
# without mutagen would see those files silently skipped.
dependencies = [
    "mutagen>=1.47",
]

[project.urls]
Homepage = "https://github.com/hed0rah/acidcat"
Repository = "https://github.com/hed0rah/acidcat"
Issues = "https://github.com/hed0rah/acidcat/issues"

[project.optional-dependencies]
analysis = [
    "librosa>=0.10.1",
    "numpy>=1.26",
    "scipy>=1.13",
    "soundfile>=0.12",
]
ml = [
    "acidcat[analysis]",
    "pandas>=2.0",
    "scikit-learn>=1.3",
]
viz = ["acidcat[ml]", "matplotlib>=3.7", "seaborn>=0.12"]
notebook = ["jupyter>=1.0", "ipykernel>=6.0"]
mcp = ["mcp>=1.0"]
all = ["acidcat[ml,viz,notebook,mcp]"]

[project.scripts]
acidcat = "acidcat.cli:main"
acidcat-mcp = "acidcat.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
